# miniseed-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build2.rs  wrapper.h
.github/workflows/: rust.yml
src/: bindings.rs  lib.rs
tests/: parse.rs  read.rs
