[package]
name    = "miniseed"
version = "1.0.2"
authors = ["Brian Savage <savage13@gmail.com>"]
description = "MiniSEED library for rust"
repository = "https://github.com/savage13/miniseed-rs"
homepage = "https://github.com/savage13/miniseed-rs"
documentation = "https://docs.rs/miniseed/"
readme = "README.md"
keywords = ["miniseed", "iris", "seismology"]
license = "MIT"
build = "build.rs"

[dependencies]
chrono = "0.4"
glob   = "0.2"
libc   = "0.2"
num    = "0.1"
pre-commit = "0.5.2"

[build-dependencies]
git2 = "0.13"
bindgen = "0.58.1"

[package.metadata.precommit]
fmt = "cargo fmt --all -- --check 2>&1"

